--- a/first-app-demo/bin/pom.xml
+++ b/first-app-demo/bin/pom.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>web</module>
+	<modules>
+		<module>web</module>
 		<module>persistence</module>
 		<module>model</module>
+		<module>utility</module>
 	</modules>
-    <parent>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.0.M3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
+		<!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.beet</groupId>
 	<artifactId>first-app-demo</artifactId>
@@ -20,9 +22,9 @@
 	<packaging>pom</packaging>
 	<description>Demo project for Spring Boot</description>
 
-	<!-- <properties>
+	<properties>
 		<java.version>1.8</java.version>
-	</properties> -->
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -60,6 +62,11 @@
 			<groupId>io.projectreactor</groupId>
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.beet</groupId>
+			<artifactId>utility</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
