--- a/first-app-demo/bin/utility/pom.xml
+++ b/first-app-demo/bin/utility/pom.xml
@@ -10,13 +10,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web</artifactId>
+    <artifactId>utility</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.beet</groupId>
-            <artifactId>persistence</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+
+
+
 </project>
