--- a/first-app-demo/dao/pom.xml
+++ b/first-app-demo/dao/pom.xml
@@ -9,18 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>persistence</artifactId>
+    <artifactId>dao</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.beet</groupId>
             <artifactId>model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        <!-- <dependency>
-            <groupId>com.beet</groupId>
-            <artifactId>utility</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency> -->
     </dependencies>
-
 </project>
