--- a/RxDemo/pom.xml
+++ b/RxDemo/pom.xml
@@ -21,6 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.reactivex.rxjava2</groupId>
+      <artifactId>rxjava</artifactId>
+      <version>2.2.9</version>
+    </dependency>
   </dependencies>
 
   <build>
