--- a/RxDemo/pom.xml
+++ b/RxDemo/pom.xml
@@ -26,6 +26,11 @@
       <artifactId>rxjava</artifactId>
       <version>2.2.9</version>
     </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>retrofit</artifactId>
+      <version>2.6.0</version>
+    </dependency>
   </dependencies>
 
   <build>
