--- a/RxDemo/pom.xml
+++ b/RxDemo/pom.xml
@@ -31,6 +31,16 @@
       <artifactId>retrofit</artifactId>
       <version>2.6.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>converter-gson</artifactId>
+      <version>2.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.retrofit2</groupId>
+      <artifactId>adapter-rxjava2</artifactId>
+      <version>2.6.0</version>
+    </dependency>
   </dependencies>
 
   <build>
