a simple login demo https://zhuanlan.zhihu.com/p/55796334

--- a/demo/src/main/resources/application-dev.yml
+++ b/demo/src/main/resources/application-dev.yml
@@ -8,5 +8,6 @@ book:
   name: SpringCloudInAction
   author: ZhaoYongChao
   desc: ${book.author} is writing <${book.name}>
+  id: ${random.int}
 server:
   port: 8080
